--- a/apis.yml
+++ b/apis.yml
@@ -1,34 +1,45 @@
 aid: carto
-name: Carto
-description: >-
-  Executing workflows via API. A workflow can be executed via an API call, which
-  allows merging workflows with bigger processes, running analytics ...
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2025-01-08'
-modified: '2025-01-08'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/carto/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: carto:carto
     name: Carto
+    tags:
+      - API
+    humanURL: >-
+      https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
+    properties:
+      - url: >-
+          https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
+        type: Documentation
     description: >-
       Executing workflows via API. A workflow can be executed via an API call,
       which allows merging workflows with bigger processes, running analytics
       ...
-    humanURL: >-
-      https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
-    tags:
-      - API
-    properties:
-      - type: Documentation
-        url: >-
-          https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
+name: Carto
+tags:
+  - Geospatial
+  - Geographic
+  - Mapping
+type: Index
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2025-01-08'
+modified: '2025-02-27'
+position: Consumer
+description: >-
+  Carto is a location intelligence platform that allows users to analyze and
+  visualize spatial data in order to gain insights into their business or
+  research. With Carto, users can upload their own geographic datasets, connect
+  to existing data sources, and create interactive maps and visualizations. The
+  platform offers a wide range of tools for spatial analysis, data
+  visualization, and geospatial modeling, making it easy for users to explore
+  and understand their data in a geographic context. Additionally, Carto allows
+  users to share their maps and insights with others through interactive
+  dashboards and embeddable visualizations. Overall, Carto helps users harness
+  the power of spatial data to make informed decisions and solve complex
+  problems.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
