--- a/apis.yml
+++ b/apis.yml
@@ -6,11 +6,9 @@ apis:
     name: Carto
     tags:
       - API
-    humanURL: >-
-      https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
+    humanURL: https://api-docs.carto.com/
     properties:
-      - url: >-
-          https://docs.carto.com/carto-user-manual/workflows/executing-workflows-via-api
+      - url: https://api-docs.carto.com/
         type: Documentation
     description: >-
       Executing workflows via API. A workflow can be executed via an API call,
